--- a/Module04/style1.css
+++ b/Module04/style1.css
@@ -8,16 +8,16 @@ body {
   text-align: center;}
 
 .wrapper {
-  width: 720px;
+  width: 90%;
   margin: 0px auto;}
 
 .header {
   margin: 40px 0px 20px 0px;}
 
 .entry {
-  width: 220px;
+  width: 25%;
   float: left;
-  margin: 10px;
+  margin: 1%;
   height: 198px;
   background-image: url("images/shadow.png");
   background-repeat: no-repeat;
