--- a/Module04/style3.css
+++ b/Module04/style3.css
@@ -14,7 +14,7 @@
                 font-style: normal;
         color: black;
 }
-			main {
+			div {
 				overflow: auto;}
 			nav, section, footer {
 				margin: 1%;
