--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@
 nav, section, footer {
 				margin: 1%;
 }
+
+.feature{
+               background-image: url("http://www.htmlandcssbook.com/code-samples/chapter-05/images/quokka.jpg");
+               background-size:contain;
+               background-position: right;
+               background-repeat:no-repeat;
+}
+
 			article {
 				width: 31.3%;
 				float: left;
@@ -40,6 +48,7 @@ h3, h4, p {
 
 .column1, .column2, .column3 {
       background-color: gray;
+      text-color: black
 }
 
 input {color:black;}
