edited home again

--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
 	font-family: 'UniqueRegular'; 
                 font-weight: normal; 
                 font-style: normal;
-        color: white;}
+        color: black;}
 			body {
 				width: 90%;
 				margin: 0 auto;
-                background-image: url("http://www.htmlandcssbook.com/code-samples/chapter-16/images/pattern.gif");
+                background-color: tan;
 }
 
 		div {
@@ -18,12 +18,6 @@ nav, section, footer {
 				margin: 1%;
 }
 
-.feature{
-               background-image: url("http://www.htmlandcssbook.com/code-samples/chapter-05/images/quokka.jpg");
-               background-size:contain;
-               background-position: right;
-               background-repeat:no-repeat;
-}
 
 			article {
 				width: 31.3%;
